fixed issue with experience logos overlapping into text column

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -298,7 +298,6 @@ hr {
     margin-left: auto;
     margin-right: auto;
     display: block;
-    width: auto;
 
     @media screen and (max-width: 768px) {
         margin-top: 20px;
